Conflicts, Arrows & Positive Bounds
- Bound must be positive crash - fixed
- disabled picking up arrows show from bows
- fixed language naming conflicts

--- a/src/main/resources/assets/randomloot/lang/en_us.lang
+++ b/src/main/resources/assets/randomloot/lang/en_us.lang
@@ -8,5 +8,5 @@ item.sword.name=Random Sword
 item.pickaxe.name=Random Pickaxe
 item.shovel.name=Random Shovel
 item.axe.name=Random Axe
-
+item.rl_bow.name=Random Bow
 
