Repair Station and Anvil

--- a/src/main/resources/assets/randomloot/lang/en_us.lang
+++ b/src/main/resources/assets/randomloot/lang/en_us.lang
@@ -11,3 +11,4 @@ item.axe.name=Random Axe
 item.rl_bow.name=Random Bow
 
 tile.random_anvil.name=Golden Anvil
+tile.repair_station.name=Repair Station
