--- a/src/main/resources/assets/randomloot/lang/ru_ru.lang
+++ b/src/main/resources/assets/randomloot/lang/ru_ru.lang
@@ -1,8 +1,6 @@
-//misc
 itemGroup.randomlootTab=Random Loot Mod
 
 
-//items
 item.basic_case.name=Основная сумка
 item.golden_case.name=§6Золотая сумка
 item.titan_case.name=§dТитановая сумка
@@ -11,9 +9,14 @@ item.pickaxe.name=Случайная кирка
 item.shovel.name=Случайная лопата
 item.axe.name=Случайный топор
 item.rl_bow.name=Случайный лук
+item.heavy_helmet.name=Случайный шлем
+item.heavy_chest.name=Случайный нагрудник
+item.heavy_legs.name=Случайные поножи
+item.heavy_boots.name=Случайные ботинки
+item.titanium_helmet.name=Случайный шлем
+item.titanium_chest.name=Случайный нагрудник
+item.titanium_legs.name=Случайные поножи
+item.titanium_boots.name=Случайные ботинки
 
-//armor
-//item.chestplate.name=Нагрудник
-
-//blocks
-//tile.block.name=Блок
+tile.random_anvil.name=Золотая наковальня
+tile.repair_station.name=Ремонтная станция
