Paxels and fixes
Added paxels
New Axe texture
Changed some config stuff
Fixed effects on armor

--- a/src/main/resources/assets/randomloot/lang/en_us.lang
+++ b/src/main/resources/assets/randomloot/lang/en_us.lang
@@ -8,6 +8,7 @@ item.sword.name=Random Sword
 item.pickaxe.name=Random Pickaxe
 item.shovel.name=Random Shovel
 item.axe.name=Random Axe
+item.paxel.name=Random Paxel
 item.rl_bow.name=Random Bow
 item.heavy_helmet.name=Random Helmet
 item.heavy_chest.name=Random Chestplate
