Added Case Ripper
- added case ripper (opens cases by itself when powered)
- tweaked other random stuff

--- a/src/main/resources/assets/randomloot/lang/en_us.lang
+++ b/src/main/resources/assets/randomloot/lang/en_us.lang
@@ -21,3 +21,4 @@ item.titanium_boots.name=Random Boots
 
 tile.random_anvil.name=Golden Anvil
 tile.repair_station.name=Repair Station
+tile.case_opener.name=Case Ripper
