--- a/src/main/resources/assets/randomloot/lang/en_us.lang
+++ b/src/main/resources/assets/randomloot/lang/en_us.lang
@@ -18,6 +18,7 @@ item.titanium_helmet.name=Random Helmet
 item.titanium_chest.name=Random Chestplate
 item.titanium_legs.name=Random Leggings
 item.titanium_boots.name=Random Boots
+item.random_shard.name=Random Shard
 
 tile.random_anvil.name=Golden Anvil
 tile.repair_station.name=Repair Station
