--- a/src/main/resources/assets/randomloot/lang/en_us.lang
+++ b/src/main/resources/assets/randomloot/lang/en_us.lang
@@ -19,6 +19,7 @@ item.titanium_chest.name=Random Chestplate
 item.titanium_legs.name=Random Leggings
 item.titanium_boots.name=Random Boots
 item.random_shard.name=Random Shard
+item.sledge_hammer.name=Sledge Hammer
 
 tile.random_anvil.name=Golden Anvil
 tile.repair_station.name=Repair Station
