--- a/src/main/resources/assets/randomloot/lang/en_us.lang
+++ b/src/main/resources/assets/randomloot/lang/en_us.lang
@@ -19,6 +19,9 @@ item.titanium_chest.name=Random Chestplate
 item.titanium_legs.name=Random Leggings
 item.titanium_boots.name=Random Boots
 item.random_shard.name=Random Shard
+item.random_chunk.name=Random Chunk
+item.random_cluster.name=Random Cluster
+
 item.throwable.name=Random Throwable
 
 tile.random_anvil.name=Golden Anvil
