--- a/src/main/resources/assets/randomloot/lang/pt_br.json
+++ b/src/main/resources/assets/randomloot/lang/pt_br.json
@@ -41,6 +41,6 @@
     
     "button.remove": "Remover Traços",
     
-    "container.editor.removewarning": "Todos os traços serão retiradas desta ferramenta e ela será fortemente danificada."
+    "container.editor.removewarning": "Todos os traços serão retirados desta ferramenta e ela será fortemente danificada."
     
 }
