corrected ru_ru.json

--- a/src/main/resources/assets/randomloot/lang/ru_ru.json
+++ b/src/main/resources/assets/randomloot/lang/ru_ru.json
@@ -21,7 +21,7 @@
     "item.randomloot.titanium_boots": "Случайные ботинки",
     "item.randomloot.random_shard": "Случайный осколок",
     "item.randomloot.random_chunk": "Случайный кусок",
-    "item.randomloot.random_cluster": "Случайный сластер",
+    "item.randomloot.random_cluster": "Случайный кластер",
     "item.randomloot.trait_holder": "Таинственная эссенция",
 
 
